--- a/style.css
+++ b/style.css
@@ -13,3 +13,14 @@
     color: purple;
     font-family: 'Roboto' , sans-serif ;
 }
+#panel, #flip {
+  padding: 10px;
+  text-align: center;
+  background-color: #f5d9f8;
+  border: solid 1px #f5d9f8;
+}
+
+#panel {
+  padding: 0px;
+  display: none;
+}
